[added] add eeprom
- set input pin pcf pin 3 and 7

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	adafruit/Adafruit INA219@^1.2.3
 	adafruit/Adafruit ADS1X15@^2.5.0
 	sensirion/Sensirion I2C SHT4x@^1.1.0
+	robtillaart/I2C_EEPROM@^1.8.5
