--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+extra_configs = 
+	env.ini
+
 [env:esp32-s3-devkitc-1]
 platform = espressif32
 board = esp32-s3-devkitc-1
@@ -21,3 +25,5 @@ lib_deps =
 	adafruit/Adafruit ADS1X15@^2.5.0
 	sensirion/Sensirion I2C SHT4x@^1.1.0
 	robtillaart/I2C_EEPROM@^1.8.5
+	https://github.com/mengxyz/ESPAsyncWebServer.git
+	bblanchon/ArduinoJson@^7.0.4
