--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
         "cmath": "cpp",
         "utility": "cpp",
         "regex": "c",
-        "wire.h": "c"
+        "wire.h": "c",
+        "bitset": "cpp",
+        "algorithm": "cpp"
     }
 }
