[added] save config to eeprom
+ load default ip from env
+ adjust ina value now max 16v 3.2A
+ many file split

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,9 +21,21 @@ upload_speed = 921600
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.12.2
 	xreef/PCF8574 library@^2.3.7
-	adafruit/Adafruit INA219@^1.2.3
+	# adafruit/Adafruit INA219@^1.2.3
 	adafruit/Adafruit ADS1X15@^2.5.0
 	sensirion/Sensirion I2C SHT4x@^1.1.0
 	robtillaart/I2C_EEPROM@^1.8.5
 	https://github.com/mengxyz/ESPAsyncWebServer.git
 	bblanchon/ArduinoJson@^7.0.4
+	kitesurfer1404/WS2812FX@^1.4.2
+	robtillaart/ADS1X15@^0.4.2
+build_flags = 
+	-DWIFI_SSID="low_signal_plus"
+	-DWIFI_PASSWORD="'00000001'"
+	-DAUTH_USER="user"
+	-DAUTH_PASSWORD="123456"
+	-DLOCAL_IP="192.168.1.184"
+	-DGATEWAY="192.168.1.1"
+	-DSUBNET="255.255.0.0"
+	-DDNS1="8.8.8.8"
+	-DDNS2="1.1.1.1"
