--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,31 @@
 {
-    "files.associations": {
-        "*.ejs": "html",
-        "array": "cpp",
-        "deque": "cpp",
-        "string": "cpp",
-        "unordered_map": "cpp",
-        "unordered_set": "cpp",
-        "vector": "cpp",
-        "string_view": "cpp",
-        "initializer_list": "cpp",
-        "*.tcc": "cpp",
-        "system_error": "cpp",
-        "random": "cpp",
-        "cmath": "cpp",
-        "utility": "cpp",
-        "regex": "c",
-        "wire.h": "c",
-        "bitset": "cpp",
-        "algorithm": "cpp"
-    }
+  "files.associations": {
+    "*.ejs": "html",
+    "array": "cpp",
+    "deque": "cpp",
+    "string": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "vector": "cpp",
+    "string_view": "cpp",
+    "initializer_list": "cpp",
+    "*.tcc": "cpp",
+    "system_error": "cpp",
+    "random": "cpp",
+    "cmath": "cpp",
+    "utility": "cpp",
+    "regex": "c",
+    "wire.h": "c",
+    "bitset": "cpp",
+    "algorithm": "cpp",
+    "memory_resource": "cpp"
+  },
+  // "[c]": {
+  //   "editor.defaultFormatter": "ms-vscode.cpptools"
+  //   //☝🏼 Select the MS extension as defaultFormatter
+  // },
+  // "[cpp]": {
+  //   "editor.defaultFormatter": "ms-vscode.cpptools"
+  // },
+  // "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, IndentWidth: 3, IncludeBlocks: Merge, IndentGotoLabels: true, KeepEmptyLinesAtTheStartOfBlocks: true}",
 }
