--- a/env.sample.ini
+++ b/env.sample.ini
@@ -4,3 +4,8 @@ build_flags =
 	-DWIFI_PASSWORD="PASSWORD"
 	-DAUTH_USER="USER"
 	-DAUTH_PASSWORD="PASSWORD"
+	-DLOCAL_IP="192.168.1.184"
+	-DGATEWAY="192.168.1.1"
+	-DSUBNET="255.255.0.0"
+	-DDNS1="8.8.8.8"
+	-DDNS2="1.1.1.1"
