[changed] migrate to PsychicHttp
- add rtc sync
- add mdns

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ extra_configs =
 	env.ini
 
 [env:esp-fan-hub]
-platform = espressif32
+platform = espressif32@6.8.1
 board = esp32-s3-devkitc-1
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
@@ -21,19 +21,16 @@ framework = arduino
 extra_scripts = pre:fw_version.py
 monitor_speed = 115200
 upload_speed = 921600
+
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.12.2
 	xreef/PCF8574 library@^2.3.7
 	adafruit/Adafruit ADS1X15@^2.5.0
 	robtillaart/I2C_EEPROM@^1.8.5
-	https://github.com/mengxyz/ESPAsyncWebServer.git
 	bblanchon/ArduinoJson@^7.0.4
 	kitesurfer1404/WS2812FX@^1.4.2
-	; robtillaart/ADS1X15@^0.4.2
-	; https://github.com/rstephan/TPM2.git
-	; https://github.com/rstephan/ArtnetWifi.git
 	robtillaart/INA3221@^0.2.0
 	sensirion/arduino-sht@^1.2.5
 	olikraus/U8g2@^2.35.19
-	; hideakitai/ArtNet@^0.8.0
-	; https://github.com/drvkmr/ESPAsyncE131.git
+	adafruit/RTClib@^2.1.4
+	hoeken/PsychicHttp@1.2.1
