[changed] changed oled lib to Adafruit_SSD1306
- fix reset when display time and ws2812fx together

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,16 +14,21 @@ extra_configs =
 
 [env:esp-fan-hub]
 platform = espressif32@6.8.1
+framework = arduino
 board = esp32-s3-devkitc-1
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
-framework = arduino
+board_build.arduino.memory_type = qio_opi
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
 extra_scripts = pre:fw_version.py
 monitor_speed = 115200
 upload_speed = 921600
 
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.12.2
+	adafruit/Adafruit SSD1306@^2.5.11
+	olikraus/U8g2_for_Adafruit_GFX@^1.8.0
 	xreef/PCF8574 library@^2.3.7
 	adafruit/Adafruit ADS1X15@^2.5.0
 	robtillaart/I2C_EEPROM@^1.8.5
