--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 extra_scripts = pre:fw_version.py
 monitor_speed = 115200
-upload_speed = 921600
+; upload_speed = 921600
 
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.12.2
